# tripoints

./: .gitignore  CMakeLists.txt  README.md  prog1.cpp  tripoints.cpp
